User Registration SetUp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
+server.port=8081
 #### Database Properties ####
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring-reddit-clone
+spring.datasource.url=jdbc:mysql://localhost:3306/spring-reddit-clone?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=admin123
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.datasource.initialize=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+#### Mail Properties ####
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=791a30f1b1c001
+spring.mail.password=a48ab66af0c5f5
+spring.mail.protocol=smtp
+
